// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DimensionAware lifecyle screen should override both 1`] = `
<View>
  <Text>
    Width 
    60
  </Text>
  <Text>
    Height 
    30
  </Text>
</View>
`;

exports[`DimensionAware lifecyle screen should override height 1`] = `
<View>
  <Text>
    Width 
    4000
  </Text>
  <Text>
    Height 
    30
  </Text>
</View>
`;

exports[`DimensionAware lifecyle screen should override width 1`] = `
<View>
  <Text>
    Width 
    30
  </Text>
  <Text>
    Height 
    2000
  </Text>
</View>
`;

exports[`DimensionAware lifecyle screen should re-render the component on updates 1`] = `
<View>
  <Text>
    Width 
    4000
  </Text>
  <Text>
    Height 
    2000
  </Text>
</View>
`;

exports[`DimensionAware lifecyle window should override both 1`] = `
<View>
  <Text>
    Width 
    60
  </Text>
  <Text>
    Height 
    30
  </Text>
</View>
`;

exports[`DimensionAware lifecyle window should override height 1`] = `
<View>
  <Text>
    Width 
    4000
  </Text>
  <Text>
    Height 
    30
  </Text>
</View>
`;

exports[`DimensionAware lifecyle window should override width 1`] = `
<View>
  <Text>
    Width 
    30
  </Text>
  <Text>
    Height 
    2000
  </Text>
</View>
`;

exports[`DimensionAware lifecyle window should re-render the component on updates 1`] = `
<View>
  <Text>
    Width 
    4000
  </Text>
  <Text>
    Height 
    2000
  </Text>
</View>
`;

exports[`DimensionAware renders 1`] = `
<Component>
  <Component>
    Width 
    750
  </Component>
  <Component>
    Height 
    1334
  </Component>
</Component>
`;
